fixed group by error running on 0.9, fixed saas syntax error

--- a/public/stylesheets/sass/admin/custom_fields.sass
+++ b/public/stylesheets/sass/admin/custom_fields.sass
@@ -36,7 +36,7 @@ iframe
     &.error
       :background #FFF url(/images/admin/exclamation.png) no-repeat 5px 50%
     &.notice
-      :background :#FFF url(/images/admin/warning.png) no-repeat 5px 50%
+      :background #FFF url(/images/admin/warning.png) no-repeat 5px 50%
 
   .cf_box
     +clearfix
